--- a/trunk/configs/boards/MI-R3G/kernel-4.4.x.config
+++ b/trunk/configs/boards/MI-R3G/kernel-4.4.x.config
@@ -1987,7 +1987,7 @@ CONFIG_USB_OHCI_HCD=m
 #
 CONFIG_USB_ACM=m
 CONFIG_USB_PRINTER=m
-CONFIG_USB_WDM=m
+CONFIG_USB_WDM=y
 # CONFIG_USB_TMC is not set
 
 #
@@ -2028,7 +2028,7 @@ CONFIG_USB_STORAGE_REALTEK=m
 #
 # USB port drivers
 #
-CONFIG_USB_SERIAL=m
+CONFIG_USB_SERIAL=y
 CONFIG_USB_SERIAL_GENERIC=y
 # CONFIG_USB_SERIAL_SIMPLE is not set
 # CONFIG_USB_SERIAL_AIRCABLE is not set
@@ -2063,16 +2063,16 @@ CONFIG_USB_SERIAL_FTDI_SIO=m
 CONFIG_USB_SERIAL_PL2303=m
 # CONFIG_USB_SERIAL_OTI6858 is not set
 # CONFIG_USB_SERIAL_QCAUX is not set
-CONFIG_USB_SERIAL_QUALCOMM=m
+CONFIG_USB_SERIAL_QUALCOMM=y
 # CONFIG_USB_SERIAL_SPCP8X5 is not set
 # CONFIG_USB_SERIAL_SAFE is not set
-CONFIG_USB_SERIAL_SIERRAWIRELESS=m
+CONFIG_USB_SERIAL_SIERRAWIRELESS=y
 # CONFIG_USB_SERIAL_SYMBOL is not set
 # CONFIG_USB_SERIAL_TI is not set
 # CONFIG_USB_SERIAL_CYBERJACK is not set
 # CONFIG_USB_SERIAL_XIRCOM is not set
-CONFIG_USB_SERIAL_WWAN=m
-# CONFIG_USB_SERIAL_OPTION is not set
+CONFIG_USB_SERIAL_WWAN=y
+CONFIG_USB_SERIAL_OPTION=y
 # CONFIG_USB_SERIAL_OMNINET is not set
 CONFIG_USB_SERIAL_OPTICON=m
 # CONFIG_USB_SERIAL_XSENS_MT is not set
